--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "debug": "~2.6.0",
     "ejs": "~2.5.5",
     "express": "~4.14.1",
+    "monk": "^4.0.0",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.2"
+    "serve-favicon": "~2.3.2",
+    "underscore": "^1.8.3",
+    "uuid": "^3.0.1"
   }
 }
