--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
     "ejs": "~2.5.5",
+    "elasticsearch": "^13.0.0",
     "express": "~4.14.1",
     "jsonwebtoken": "^7.4.0",
     "monk": "^4.0.0",
