--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcrypt": "^1.0.2",
     "body-parser": "~1.16.0",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.3",
     "debug": "~2.6.0",
     "ejs": "~2.5.5",
     "elasticsearch": "^13.0.0",
